// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with default message 1`] = `
<div
  className="error-page"
>
  <div
    className="error-container"
  >
    <div
      className="error-page-content row"
    >
      <p>
        Something went wrong!
      </p>
      We hit an internal server error, try again soon, or, if that doesn't work, contact us.
    </div>
  </div>
</div>
`;

exports[`renders with custom message 1`] = `
<div
  className="error-page"
>
  <div
    className="error-container"
  >
    <div
      className="error-page-content row"
    >
      Test Error Message
    </div>
  </div>
</div>
`;
